--- a/framadate-style.css
+++ b/framadate-style.css
@@ -6,15 +6,19 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    position: relative;
+    min-height: 100%;
 }
 .container.ombre {
     padding: 0;
     margin: 0;
     width: 100%;
+    flex-grow: 1;
+    min-height: 100vh;
 }
 .ombre {
     background-color: #ebebeb;
-    background-image: url('images/background.png');
+    background-image: url('../images/background.png');
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed; 
@@ -26,6 +30,12 @@ body {
 
 i {
     color: #000;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: 600;
+    margin: 0 0 20px 0;
 }
 
 /* Startseite */
@@ -48,6 +58,51 @@ button.btn.btn-success {
     background-color: #267365;
     border: 0;
 }
+
+.row {
+    margin-right: 150px;
+    margin-left: 150px;
+}
+
+.row {
+    background-color: #fff;
+    border-radius: 10px;
+    border-top: 10px solid #267365;
+    padding: 30px;
+}
+
+@media (min-width: 992px) {
+    .col-md-offset-2, .col-md-offset-1 {
+        margin-left: 0;
+    }
+    .col-md-8, .col-md-10 {
+        width: 100%;
+    }
+}
+@media (min-width: 768px) {
+    .col-sm-4 {
+        width: 180px;
+    }
+    .col-sm-8 {
+        width: calc(100% - 180px);
+    }
+}
+
+.form-horizontal .control-label {
+    text-align: left;
+}
+label.col-sm-4.control-label, a.optionnal-parameters.lead {
+    margin-left: -10px;
+}
+a.optionnal-parameters.lead {
+    color: #333333;
+    font-weight: 700;
+}
+.form-horizontal .form-group {
+    margin-right: 0;
+    margin-left: 0;
+}
+
 
 /* Pool Seite */
 .jumbotron {
@@ -91,6 +146,9 @@ header.header-cevi a img {
     margin-right: 20px;
     font-size: 16px;
     font-weight: 400;
+}
+.header-right p {
+    margin: 0;
 }
 .header-right a.button {
     margin: 0 10px;
@@ -146,7 +204,6 @@ header.header-cevi a img {
 }
 .home h1 {
     font-size: 50px;
-    font-weight: 600;
 }
 .home p {
     font-size: 20px;
@@ -167,6 +224,10 @@ header.header-cevi a img {
     color: #000;
     padding: 20px;
     text-align: center;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .footer a {
