--- a/framadate-style.css
+++ b/framadate-style.css
@@ -260,6 +260,7 @@ span.btn.btn-warning.btn-lg {
     margin-top: 50px;
     width: 700px;
     border-radius: 10px;
+    box-shadow: 0px 0px 20px 9px rgba(0,0,0,0.1);
 }
 @media (max-width: 992px) {
     .home {
