--- a/framadate/framadate-style.css
+++ b/framadate/framadate-style.css
@@ -294,9 +294,36 @@ a.optionnal-parameters.lead {
     color: #000000;
     font-weight: 700;
 }
-
+.col-sm-8 {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+label.col-sm-2.control-label {
+    padding: 0;
+}
+.col-md-4 {
+    padding-left: 0;
+}
+.col-md-8.text-right {
+    padding: 0;
+}
+i.glyphicon.glyphicon-cog {
+    display: none;
+}
+a.optionnal-parameters.collapsed.lead {
+    margin-left: 5px;
+}
 
 /* === Pool Page === */
+div#description-form, .col-md-5.hidden-print, .form-group.form-group.col-md-6, .hidden-print.jumbotron {
+    padding-left: 0;
+}
+h3 {
+    margin-left: 15px;
+}
+div#title-form {
+    margin-left: -30px;
+}
 .jumbotron {
     background-color: #fff;
 }
@@ -347,10 +374,29 @@ div.comment {
     border-radius: 10px;
     padding: 12px 15px;
     display: flex;
+    margin-left: 15px;
 }
 .comment-image {
     margin: 5px 10px 0 0;
 }
 img.person-placeholder {
     height: 30px;
+}
+.col-sm-6.col-sm-offset-3.alert.alert-info {
+    background-color: #fff0;
+    border: 0;
+    padding: 0;
+}
+@media (min-width: 992px) {
+    .col-md-offset-3 {
+        margin-left: 0;
+    }
+    .col-md-6 {
+        width: 100%;
+    }
+}
+@media (min-width: 768px) {
+    .col-sm-offset-3 {
+        margin-left: 30px;
+    }
 }
