--- a/framadate/framadate-style.css
+++ b/framadate/framadate-style.css
@@ -52,12 +52,14 @@ body::after {
 h1 {
     font-size: 36px;
     margin: 0 0 20px 0;
+    color: #000;
 }
 h1, h2, h3 {
     font-weight: 600;
 }
 p {
     color: var(--content-text-color);
+    font-size: 1em;
 }
 a.button, input#add_comment {
     display: inline-block;
@@ -111,6 +113,8 @@ main {
     .col-sm-8 {
         width: calc(100% - 180px);
         padding: 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 @media (max-width: 992px) {
@@ -207,21 +211,125 @@ header.header-cevi a img {
 
 
 /* === Footer === */
-.footer {
+footer {
     background-color: #fff;
-    color: var(--content-text-color);
-    padding: 20px;
-    text-align: center;
+    padding: 40px 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     right: 0;
     bottom: 0;
     left: 0;
-    margin-top: 50px;
-    position: absolute;
+    margin-bottom: -50px;
 }
-.footer a {
-    color: var(--content-text-color);
+.footer-columns {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.footer-column {
+    flex: 2;
+    margin-right: 20px;
+}
+.footer-column-1 {
+    flex: 40%;
+}
+.footer-column-2, .footer-column-3 {
+    flex: 20%;
+}
+.footer-column:last-child {
+    margin-right: 0;
+}
+img.footer-logo {
+    margin-bottom: 20px;
+}
+.footer-title {
+    font-weight: bold;
+    color: #000;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+.footer-logo {
+    max-width: 200px;
+    height: auto;
+}
+.social-icons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    margin-top: 30px;
+}
+.social-icons li {
+    margin-right: 10px;
+}
+.social-icons i {
+    font-size: 24px;
+    color: #000;
+}
+.footer-links {
+    list-style: none;
+    padding: 0;
+}
+.footer-links li {
+    margin-bottom: 10px;
+}
+footer a {
+    color: #333333;
     text-decoration: none;
-    margin: 0 10px;
+}
+.footer-bottom {
+    background-color: #fff;
+    font-size: 14px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+}
+.footer-bottom-right {
+    text-align: right;
+}
+.footer-bottom-left,
+.footer-bottom-right {
+    flex: 1;
+}
+.footer-bottom-left {
+    margin-right: 10px;
+}
+a.footer-links-bottom {
+    margin-right: 15px;
+}
+@media (max-width: 768px) {
+    footer {
+        padding: 20px;
+    }
+    .footer-columns {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .footer-column {
+        flex: 1;
+        margin: 0 0 40px;
+    }
+    .footer-logo {
+        max-width: 150px;
+    }
+    .footer-links-bottom {
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+    .footer-bottom {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 20px;
+    }
+    .footer-bottom-left,
+    .footer-bottom-right {
+        flex: 1;
+        text-align: left;
+        margin-bottom: 10px;
+    }
 }
 
 
@@ -256,6 +364,13 @@ span.btn.btn-warning.btn-lg {
 .home .buttons a.button {
     margin: 0 10px;
 }
+hr.title-line {
+    border: none;
+    height: 5px;
+    background-color: #000;
+    margin: 5px auto 40px auto;
+    width: 100px;
+}
 .home img {
     margin-top: 50px;
     width: 700px;
@@ -264,13 +379,14 @@ span.btn.btn-warning.btn-lg {
 }
 @media (max-width: 992px) {
     .home {
-        padding: 50px 20px;
+        padding: 0 0;
+        margin: 0 -20px;
     }
     .home h1 {
         font-size: 40px;
     }
     .home img {
-        width: 80%;
+        width: 100%;
     }
     .home .buttons a.button {
         margin: 5px 10px;
@@ -286,9 +402,6 @@ button.btn.btn-success {
 }
 .form-horizontal .control-label {
     text-align: left;
-}
-label.col-sm-4.control-label, a.optionnal-parameters.lead {
-    margin-left: -10px;
 }
 a.optionnal-parameters.lead {
     color: #000000;
@@ -322,10 +435,16 @@ h3 {
     margin-left: 15px;
 }
 div#title-form {
-    margin-left: -30px;
+    margin-left: -20px;
 }
 .jumbotron {
     background-color: #fff;
+}
+.container .jumbotron p {
+    font-size: 1.2em;
+}
+.poll-description{
+    font-size: 12px;
 }
 .jumbotron h3, .jumbotron .js-title {
     font-size: 36px;
@@ -343,6 +462,13 @@ th#M2 {
 .bg-danger, a.bg-danger:hover {
     border: 1px solid #d04437;
     background-color: #fff8f7;
+}
+#tableContainer .bg-danger {
+    border: 0;
+    background-color: #ffd2d2;
+}
+#tableContainer .text-warning {
+    color: #C05827;
 }
 .alert.alert-dismissible.alert-success.hidden-print {
     background-color: #f3f9f4;
@@ -374,7 +500,7 @@ div.comment {
     border-radius: 10px;
     padding: 12px 15px;
     display: flex;
-    margin-left: 15px;
+    margin-left: 0;
 }
 .comment-image {
     margin: 5px 10px 0 0;
@@ -387,12 +513,70 @@ img.person-placeholder {
     border: 0;
     padding: 0;
 }
+table.results {
+    margin: 0;
+    width: 100%;
+}
+table.results .bg-danger .glyphicon {
+    opacity: 100;
+}
+table.results tbody th.bg-info {
+    padding: 5px 10px;
+    text-align: left;
+}
+div#name-form {
+    display: flex;
+}
+label.control-label, h3, a.public-link {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    color: #000;
+    font-size: 18px;
+}
+p.form-control-static {
+    margin: 0 0 0 5px;
+    padding: 0;
+    font-weight: 500;
+    font-size: 18px;
+}
+legend {
+    font-weight: bold;
+    font-size: 18px;
+    border-bottom: 0;
+    color: #000;
+    margin-left: -10px;
+}
+.form-group {
+    margin-left: -10px;
+}
+#add-comment .form-group label.control-label {
+    font-size: 15px;
+}
+#add-comment legend {
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+#description-form label.control-label, #comments_list h3 {
+    margin-bottom: 10px;
+}
+span.btn-link.glyphicon.glyphicon-link, p#showChart, .row.best-choice {
+    display: none;
+}
+form#comment_form {
+    margin-top: 50px;
+
 @media (min-width: 992px) {
     .col-md-offset-3 {
         margin-left: 0;
     }
     .col-md-6 {
         width: 100%;
+        pad: 0;
+    }
+    .col-sm-6.col-sm-offset-3.alert.alert-info {
+        margin-left: 18px;
     }
 }
 @media (min-width: 768px) {
