--- a/framadate/framadate-style.css
+++ b/framadate/framadate-style.css
@@ -302,7 +302,7 @@ a.footer-links-bottom {
 }
 @media (max-width: 768px) {
     footer {
-        padding: 20px;
+        padding: 40px 20px 20px 20px;
     }
     .footer-columns {
         flex-direction: column;
@@ -310,7 +310,7 @@ a.footer-links-bottom {
     }
     .footer-column {
         flex: 1;
-        margin: 0 0 40px;
+        margin: 0 0 25px;
     }
     .footer-logo {
         max-width: 150px;
@@ -435,7 +435,7 @@ h3 {
     margin-left: 15px;
 }
 div#title-form {
-    margin-left: -20px;
+    margin-left: -26px;
 }
 .jumbotron {
     background-color: #fff;
@@ -462,6 +462,9 @@ th#M2 {
 .bg-danger, a.bg-danger:hover {
     border: 1px solid #d04437;
     background-color: #fff8f7;
+}
+#tableContainer {
+    position: relative;
 }
 #tableContainer .bg-danger {
     border: 0;
@@ -527,6 +530,7 @@ table.results tbody th.bg-info {
 }
 div#name-form {
     display: flex;
+    margin-top: -15px;
 }
 label.control-label, h3, a.public-link {
     margin: 0;
@@ -536,10 +540,11 @@ label.control-label, h3, a.public-link {
     font-size: 18px;
 }
 p.form-control-static {
-    margin: 0 0 0 5px;
+    margin: 0 0 0 4px;
     padding: 0;
     font-weight: 500;
     font-size: 18px;
+    font-weight: bold;
 }
 legend {
     font-weight: bold;
@@ -567,7 +572,20 @@ span.btn-link.glyphicon.glyphicon-link, p#showChart, .row.best-choice {
 }
 form#comment_form {
     margin-top: 50px;
-
+}
+.form-control-static.well.poll-description {
+    background-color: #fff;
+    border: 0;
+    padding: 10px 0;
+}
+@media (max-width: 768px) {
+    .col-md-5.hidden-print {
+        display: none;
+    }
+    .jumbotron h3, .jumbotron .js-title {
+        font-size: 27px;
+    }
+}
 @media (min-width: 992px) {
     .col-md-offset-3 {
         margin-left: 0;
