--- a/framadate/framadate-style.css
+++ b/framadate/framadate-style.css
@@ -504,6 +504,7 @@ div.comment {
     padding: 12px 15px;
     display: flex;
     margin-left: 0;
+    background-color: #e3e3e3;
 }
 .comment-image {
     margin: 5px 10px 0 0;
@@ -532,12 +533,15 @@ div#name-form {
     display: flex;
     margin-top: -15px;
 }
-label.control-label, h3, a.public-link {
+label.control-label, h3, a.public-link, a.admin-link {
     margin: 0;
     padding: 0;
     font-weight: bold;
     color: #000;
     font-size: 18px;
+}
+#public-link, #admin-link {
+    width: 250px;
 }
 p.form-control-static {
     margin: 0 0 0 4px;
@@ -573,6 +577,9 @@ span.btn-link.glyphicon.glyphicon-link, p#showChart, .row.best-choice {
 form#comment_form {
     margin-top: 50px;
 }
+.jumbotron.bg-danger {
+    padding: 50px;
+}
 .form-control-static.well.poll-description {
     background-color: #fff;
     border: 0;
@@ -582,8 +589,11 @@ form#comment_form {
     .col-md-5.hidden-print {
         display: none;
     }
-    .jumbotron h3, .jumbotron .js-title {
+    .jumbotron h3, .jumbotron .js-title, h1.title {
         font-size: 27px;
+    }
+    .jumbotron.bg-danger {
+        padding: 35px;
     }
 }
 @media (min-width: 992px) {
@@ -596,6 +606,12 @@ form#comment_form {
     }
     .col-sm-6.col-sm-offset-3.alert.alert-info {
         margin-left: 18px;
+    }
+    .form-group {
+        margin-right: 20px;
+    }
+    .col-md-4 {
+        width: auto;
     }
 }
 @media (min-width: 768px) {
