--- a/framadate/framadate-style.css
+++ b/framadate/framadate-style.css
@@ -355,6 +355,20 @@ span.btn.btn-warning.btn-lg {
 .home h1 {
     font-size: 50px;
 }
+.home-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.home-title-icon1 {
+    margin-right: 20px;
+}
+.home-title-icon2 {
+    margin-left: 20px;
+}
+.home-title-logo {
+    font-size: 36px;
+}
 .home p {
     font-size: 20px;
 }
@@ -383,7 +397,7 @@ hr.title-line {
         margin: 0 -20px;
     }
     .home h1 {
-        font-size: 40px;
+        font-size: 33px;
     }
     .home img {
         width: 100%;
